[project]
name = "ai-background"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "snakemake>=9",
    "snakemake-executor-plugin-cluster-generic",
    "pandas",
    "numpy",
    "matplotlib"
]

[dependency-groups]
dev = [
    "poethepoet>=0.40.0",
]

[tool.poe.tasks]
runloc='uv run snakemake --cores 8   --use-singularity   --singularity-args "--bind /volatile:/volatile --bind /cvmfs:/cvmfs"'
lslog='ls ${OUT_BASE}/logs'
rmall='rm -rf ${OUT_BASE}/*'